--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/css/master.css">
     <meta charset="utf-8">
-    <title></title>
   </head>
   <body class="homepage">
-    <h1 style="text-align: center;">When baby becomes a Buds Prime</h1>
-    <div class="prime">
-      <img src="https://img.etsystatic.com/il/fda4c4/1178204279/il_570xN.1178204279_r5cq.jpg?version=1" alt="">
-    </div>
+    <h1 style="text-align: center; font-style: italic; color: #ffffff">When baby becomes a Buds Prime</h1>
+      <img class="babyprime" src="https://img.etsystatic.com/il/fda4c4/1178204279/il_570xN.1178204279_r5cq.jpg?version=1" alt="baby optimus prime playing with toy">
     <p>
       Welcome! Today I will be blogging about our son Ardyn. He has come into our lives
       and turned it upside down in the best way possible.  Don't get me wrong it
@@ -28,7 +25,11 @@ a day and life with the Ardyn:
 <br>
 
 <a href="Nicknames.html">Nicknames</a>
-</a>
+<br>
+<a href="Eating.html">Eating-Progression</a>
+<br>
+<a href="milestones.html">Milestones Checklist</a>
+
 </p>
 
   </body>
