--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/master.css">
-    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/master.css">
   </head>
+  <div class="backgroundIndex">
   <body class="homepage">
-    <h1 style="text-align: center; font-style: italic; color: #ffffff">When baby becomes a Buds Prime</h1>
+    <h1>When baby becomes a Buds Prime</h1>
       <img class="babyprime" src="https://img.etsystatic.com/il/fda4c4/1178204279/il_570xN.1178204279_r5cq.jpg?version=1" alt="baby optimus prime playing with toy">
-    <p>
+    <p class="index">
       Welcome! Today I will be blogging about our son Ardyn. He has come into our lives
       and turned it upside down in the best way possible.  Don't get me wrong it
       can be hard at times but we have honestly had a revitalization in our creativity
@@ -23,14 +23,17 @@ Below you will find quick links to jump right into and have a little glimpse in
 a day and life with the Ardyn:
 <br>
 <br>
-
+<div class="column">
 <a href="Nicknames.html">Nicknames</a>
 <br>
 <a href="Eating.html">Eating-Progression</a>
 <br>
 <a href="milestones.html">Milestones Checklist</a>
+<div>
+  <div class="row.after">
 
+  </div>
 </p>
-
+</div>
   </body>
 </html>
