--- a/milestones.html
+++ b/milestones.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <body>
-<link rel="stylesheet" href="/css/master.css">
+<link rel="stylesheet" href="css/master.css">
 <a href="index.html">Homepage</a>
 
 </body>
