--- a/Eating.html
+++ b/Eating.html
@@ -6,7 +6,7 @@
   <br>
 </head>
   <body class="eating">
-    <img class="baby-food"src="https://thumbs.dreamstime.com/b/little-baby-reading-food-guide-cute-diaper-book-feeding-healthy-meal-children-set-vector-cartoon-vegetables-fruits-meat-85619610.jpg" alt="">
+  <center><img class="baby-food"src="https://thumbs.dreamstime.com/b/little-baby-reading-food-guide-cute-diaper-book-feeding-healthy-meal-children-set-vector-cartoon-vegetables-fruits-meat-85619610.jpg" alt="cartoon baby reading food guide"></center>
   <h1 style="color: green; font-family: script; text-align: center;"> What does a Buds001 like to Eat?</h1>
 <br>
 <p font-family: Lobster;>
