--- a/index.html
+++ b/index.html
@@ -11,29 +11,28 @@
       Welcome! Today I will be blogging about our son Ardyn. He has come into our lives
       and turned it upside down in the best way possible.  Don't get me wrong it
       can be hard at times but we have honestly had a revitalization in our creativity
-      and in ourselves.  Now just to get into it what is a Buds Prime... A Buds Prime is when
+      and in ourselves.
+<br>
+      Now just to get into it what is a Buds Prime... A Buds Prime is when
       the Ardyn turns 1 and has met the required steps as a Buds001. Now there
       are many steps a Buds001 must complete or meet expectations to proceed to Buds Prime.
       These steps would be nicknames, playtime, eating, milestones, development,
       car rides, and interactions.
-
+</p>
 <br>
 <br>
 Below you will find quick links to jump right into and have a little glimpse in
 a day and life with the Ardyn:
 <br>
 <br>
-<div class="column">
-<a href="Nicknames.html">Nicknames</a>
+<nav>
+  <ul>
+<li><a href="Nicknames.html">Nicknames</a></li>
 <br>
-<a href="Eating.html">Eating-Progression</a>
+<li><a href="Eating.html">Eating-Progression</a></li>
 <br>
-<a href="milestones.html">Milestones Checklist</a>
-<div>
-  <div class="row.after">
-
-  </div>
-</p>
-</div>
-  </body>
+<li><a href="milestones.html">Milestones Checklist</a></li>
+</ul>
+</nav>
+</body>
 </html>
