--- a/Eating.html
+++ b/Eating.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="css/master.css">
-  <a href="index.html">Homepage</a>
+  <a style="position: fixed;" href="index.html">Homepage</a>
   <br>
 </head>
   <body class="eating">
