--- a/index.html
+++ b/index.html
@@ -1,38 +1,18 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html>
   <head>
-    <link rel="stylesheet" type="text/css" href="css/master.css">
-  </head>
-  <div class="backgroundIndex">
-  <body class="homepage">
-    <h1>When baby becomes a Buds Prime</h1>
-      <img class="babyprime" src="https://img.etsystatic.com/il/fda4c4/1178204279/il_570xN.1178204279_r5cq.jpg?version=1" alt="baby optimus prime playing with toy">
-    <p class="index">
-      Welcome! Today I will be blogging about our son Ardyn. He has come into our lives
-      and turned it upside down in the best way possible.  Don't get me wrong it
-      can be hard at times but we have honestly had a revitalization in our creativity
-      and in ourselves.
-<br>
-      Now just to get into it what is a Buds Prime... A Buds Prime is when
-      the Ardyn turns 1 and has met the required steps as a Buds001. Now there
-      are many steps a Buds001 must complete or meet expectations to proceed to Buds Prime.
-      These steps would be nicknames, playtime, eating, milestones, development,
-      car rides, and interactions.
-</p>
-<br>
-<br>
-Below you will find quick links to jump right into and have a little glimpse in
-a day and life with the Ardyn:
-<br>
-<br>
-<nav>
-  <ul>
-<li><a href="Nicknames.html">Nicknames</a></li>
-<br>
-<li><a href="Eating.html">Eating-Progression</a></li>
-<br>
-<li><a href="milestones.html">Milestones Checklist</a></li>
-</ul>
-</nav>
-</body>
-</html>
+    <link rel="stylesheet" href="style.processed.css">
+    <head>
+  <body id="main">
+    <h1>Chefs of Every Genre</h1>
+    <h3>The amazing individuals behind the food </h2>
+    <div id="img-div">
+    <img id="image" src="https://images.firstwefeast.com/complex/image/upload/f_auto,fl_lossy,q_auto,w_1200/cmslqxf3wpgifoakb2qq">
+  </div>
+ <p id="image-caption">
+    The chaos in the kitchen is a well-trained symphony of Artistic Courses designed to amaze guests that have come to dine with us tonight </p>
+    <br>
+ <p id="tribute-info">
+    <h3>Types of Chefs</h3>
+   <ul>
+     <li> Executive Chefs </li>m
