--- a/index.html
+++ b/index.html
@@ -4,15 +4,30 @@
     <link rel="stylesheet" href="style.processed.css">
     <head>
   <body id="main">
-    <h1>Chefs of Every Genre</h1>
-    <h3>The amazing individuals behind the food </h2>
+    <h1 id="title">The Chefs behind the Taste Buds</h1>
+    <h2><em>The amazing individuals behind the food <em></h2>
     <div id="img-div">
     <img id="image" src="https://images.firstwefeast.com/complex/image/upload/f_auto,fl_lossy,q_auto,w_1200/cmslqxf3wpgifoakb2qq">
   </div>
- <p id="image-caption">
-    The chaos in the kitchen is a well-trained symphony of Artistic Courses designed to amaze guests that have come to dine with us tonight </p>
+ <div id="image-caption">
+ <em>
+    The chaos in the kitchen is a well-trained symphony of Artistic Courses designed to amaze guests that have come to dine with us tonight </em></p>
     <br>
- <p id="tribute-info">
-    <h3>Types of Chefs</h3>
-   <ul>
-     <li> Executive Chefs </li>m
+ </div>
+    <h2 id="tribute-info" >Types of Chefs</h2>
+    <br>
+   <ul class="tribute-info">
+     <li><strong> Executive Chef </strong><br>
+       The head chef of a professional kitchen or of a group of professional kitchens.</li>
+     <li><strong> Executive Pastry Chef </strong><br>
+       Oversees the production of pastries, sweets, breads, ice creams, toppings and fillings. <br> He or she is the expert of creation, execution, and presentation of pastries and desserts.</li>
+     <li> <strong>Chef de Cuisine</strong> <br> Oversees, executes and develops menus for Restaurants</li>
+     <li> <strong>Exec. Sous Chef/Sous Chef</strong> <br> Second in authority in a restaurant or kitchen, ranking below the chef de cuisine </li>
+     <li><strong>Prep Cook/Line Cooks </strong><br> Sets up and stocks food items and other necessary supplies. <br> Prepares food items by cutting, chopping, mixing, and preparing sauces.
+<br> Cooks food items by grilling, frying, sautéing, and other cooking methods</li>
+     <li><strong>Itamae </strong><br> Is a cook in a Japanese kitchen, or a chef in larger restaurants (esp. of high-end Japanese cuisine)</li>
+    </ul>
+    </p>
+<div id="tribute-link">
+<a href="https://www.cuisinenet.com/chefs/" target="_blank">Learn about top chefs throughtout the world with this link</a>
+ </div>
