--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <h1 id="title">The Chefs behind the Taste Buds</h1>
     <h2><em>The amazing individuals behind the food <em></h2>
     <div id="img-div">
-    <img id="image" src="https://images.firstwefeast.com/complex/image/upload/f_auto,fl_lossy,q_auto,w_1200/cmslqxf3wpgifoakb2qq">
-  </div>
- <div id="image-caption">
- <em>
-    The chaos in the kitchen is a well-trained symphony of Artistic Courses designed to amaze guests that have come to dine with us tonight </em></p>
-    <br>
+    <img id="image" src="https://images.firstwefeast.com/complex/image/upload/f_auto,fl_lossy,q_auto,w_1200/cmslqxf3wpgifoakb2qq" alt="Chefs and cooks running a kitchen line"></img>
+ <h2 id="img-caption"><em> The chaos in the kitchen is a well-trained symphony of Artistic Courses designed to amaze guests that have come to dine with us tonight </em>
+ </h2>
  </div>
+ <br>
     <h2 id="tribute-info" >Types of Chefs</h2>
     <br>
    <ul class="tribute-info">
@@ -28,6 +26,10 @@
      <li><strong>Itamae </strong><br> Is a cook in a Japanese kitchen, or a chef in larger restaurants (esp. of high-end Japanese cuisine)</li>
     </ul>
     </p>
-<div id="tribute-link">
-<a href="https://www.cuisinenet.com/chefs/" target="_blank">Learn about top chefs throughtout the world with this link</a>
+    <br>
+    <p class="chefs"> <em>Being a Chef can be daunting task.  You start as a cook or prep cook working long arduous hours for years of experience.  Until, finally you are given the choice to move up to Sous Chef or maybe even Head Chef only to work even more hours; think of plans a/b/c; and have an answer to every count, question and dish. A chef isn't just one individual it is a symphony of persons that will work more hours for even less pay.  But they do it because they love it.  Chefs want to be creative and wow everybody but they are humans to. Humans that break, sweat and bleed.  So if you have bad dish just know that call offs, delays, and broken equipment happens to everyone but the team will make it up to you. Usually with a dessert from the Pastry Chef, they know how to sweeten the deal.</em>
+<div>
+<a href="https://www.cuisinenet.com/chefs/" target="_blank" id="tribute-link" >Learn about top chefs throughtout the world with this link></a>
  </div>
+      </body>
+      </html>
