--- a/survey-index.html
+++ b/survey-index.html
@@ -43,6 +43,6 @@ value="Indian"> Indian <br><br>
 <form action="/html/codes/html-comment-box-code-action.cfm" method="get">
 List your skills and/or qualifications:<br>
 <textarea rows="4" cols="25"></textarea><br /><br><br>
-<input type="submit" value="Submit" />
+  <input type="submit" value="Submit">
 </form>
  </body>
