--- a/survey-index.html
+++ b/survey-index.html
@@ -1,9 +1,9 @@
 <!doctype>
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="css/survey.css">
   <body>
-  <head>
 <h1 id="title">Free Information on Becoming a Chef</h1>
-  </head>
   <p id="description"> How to make a hobby of cooking into a career</p><br><br><br>
   <form id="survey-form">
     <label id="name-label"> Name: </label><br><br>
