--- a/tribute-index.html
+++ b/tribute-index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.processed.css">
+    <link rel="stylesheet" type="text/css" href="css/tribute.css">
     <head>
   <body id="main">
     <h1 id="title">The Chefs behind the Taste Buds</h1>
