--- a/knives-index.html
+++ b/knives-index.html
@@ -8,8 +8,7 @@
     <li><a class="nav-link" href="#shipping">Features</a></li>
 <li><a class="nav-link" href="#video">Video Demonstration</a></li>
 <li><a class="nav-link"href="#container">Packages</a></li>
-  </ul>
-
+</ul>
 </header>
 <body>
   <h2> YOUR GUIDE TO FINDING THE PERFECT CHEF KNIFE FOR YOU<h2>
@@ -35,18 +34,16 @@
     <br>
     <br>
     <br>
-  <iframe id="video" src="https://www.youtube.com/embed/LO35cdWL1MQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="video" src="https://www.youtube.com/embed/LO35cdWL1MQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
     <br>
     <br>
 <div id="container">
-
-<div class="column column-one column-offset-2">column one
-</div>
-
+<div class="column column-one column-offset-2">
+<h4>Looking for an upgrade</h4>                            </div>
 <div class="column column-two column-inset-1"><h3>Beginner Package</h3>
 <p style="font-size: 14px; font-style: italic;"> Perfect for Chef's just starting in the field </p>
-     <h4><strong>Items Included:</strong>   </h4>
+<h4><strong>Items Included:</strong></h4>
  <ul class="items-included">
  <li>8 inch Chef knife</li>
  <li>8 inch Slicing knife</li>
@@ -59,9 +56,8 @@
  <li>3.5 inch Paring knife</li>
  </ul>
 <button class="button">Select</button>                    </div>
-
 <div class="column column-three column-offset-1">
-<h3>Looking for an Upgrade<h3>
-                                                </div>
+<h3>Time to show off the skills<h3>
 </div>
-    </body>
+</div>
+</body>
