--- a/index.html
+++ b/index.html
@@ -1,35 +1,57 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.processed.css">
-    <head>
-  <body id="main">
-    <h1 id="title">The Chefs behind the Taste Buds</h1>
-    <h2><em>The amazing individuals behind the food <em></h2>
-    <div id="img-div">
-    <img id="image" src="https://images.firstwefeast.com/complex/image/upload/f_auto,fl_lossy,q_auto,w_1200/cmslqxf3wpgifoakb2qq" alt="Chefs and cooks running a kitchen line"></img>
- <h2 id="img-caption"><em> The chaos in the kitchen is a well-trained symphony of Artistic Courses designed to amaze guests that have come to dine with us tonight </em>
- </h2>
- </div>
- <br>
-    <h2 id="tribute-info" >Types of Chefs</h2>
-    <br>
-   <ul class="tribute-info">
-     <li><strong> Executive Chef </strong><br>
-       The head chef of a professional kitchen or of a group of professional kitchens.</li>
-     <li><strong> Executive Pastry Chef </strong><br>
-       Oversees the production of pastries, sweets, breads, ice creams, toppings and fillings. <br> He or she is the expert of creation, execution, and presentation of pastries and desserts.</li>
-     <li> <strong>Chef de Cuisine</strong> <br> Oversees, executes and develops menus for Restaurants</li>
-     <li> <strong>Exec. Sous Chef/Sous Chef</strong> <br> Second in authority in a restaurant or kitchen, ranking below the chef de cuisine </li>
-     <li><strong>Prep Cook/Line Cooks </strong><br> Sets up and stocks food items and other necessary supplies. <br> Prepares food items by cutting, chopping, mixing, and preparing sauces.
-<br> Cooks food items by grilling, frying, sautéing, and other cooking methods</li>
-     <li><strong>Itamae </strong><br> Is a cook in a Japanese kitchen, or a chef in larger restaurants (esp. of high-end Japanese cuisine)</li>
-    </ul>
-    </p>
-    <br>
-    <p class="chefs"> <em>Being a Chef can be daunting task.  You start as a cook or prep cook working long arduous hours for years of experience.  Until, finally you are given the choice to move up to Sous Chef or maybe even Head Chef only to work even more hours; think of plans a/b/c; and have an answer to every count, question and dish. A chef isn't just one individual it is a symphony of persons that will work more hours for even less pay.  But they do it because they love it.  Chefs want to be creative and wow everybody but they are humans to. Humans that break, sweat and bleed.  So if you have bad dish just know that call offs, delays, and broken equipment happens to everyone but the team will make it up to you. Usually with a dessert from the Pastry Chef, they know how to sweeten the deal.</em>
-<div>
-<a href="https://www.cuisinenet.com/chefs/" target="_blank" id="tribute-link" >Learn about top chefs throughtout the world with this link></a>
- </div>
-      </body>
-      </html>
+  </head>
+  <header>
+  </header>
+  <body>
+    <h2> Introduction</h2>
+    <p>The Unreal Engine is a game engine developed by Epic Games, first showcased in the 1998 first-person shooter game Unreal. Although initially developed for first-person shooters, it has been used in a variety of other genres, including platformers, fighting games, MMORPGs, and other RPGs. Written in C++, the Unreal Engine features a high degree of portability, supporting a wide range of platforms.</p>
+    <ul>
+      <li>The latest release is Unreal Engine 4, which launched in 2014 under a subscription model. Since 2015, it can be downloaded for free, with its source code available on GitHub.</li>
+      <li>Epic allows for its use in commercial products based on a royalty model, typically asking developers for 5% of revenues from sales, though with the success of Fortnite, which has become a testbed for Unreal Engine for Epic, Epic waives this fee for developers that publish their games through the Epic Games Store.</li>
+<h2>Unreal is continually growing</h2>
+      <ul>
+        <li>The first-generation Unreal Engine was developed by Tim Sweeney, the founder of Epic Games.</li>
+        <li>Epic Games is currently on the fifth generation in UnReal Engine</li>
+        <li>UnReal can be used on multiple gaming platforms.  It is versatile in every aspect but is best used on first person shooters</li>
+      </ul>
+      <h2>First Generation Unreal</h2>
+      <p>Among its features were collision detection, colored lighting, and a limited form of texture filtering.[12] The engine also integrated a level editor, UnrealEd,[13] that had support for real-time constructive solid geometry operations as early as 1996, allowing mappers to change the level layout on the fly.[14][15] Even though Unreal was designed to compete with id Software, developers of Doom and Quake, John Carmack complimented the game for the use of 16-bit color while remarking its implementation of visual effects such as volumetric fog.</p>
+      <h2>Unreal 2.0</h2>
+      <p>Though based on its predecessor, this generation saw a notable advance in rendering terms as well as new improvements to the tool set.[37] Capable of running levels nearly 100 times more detailed than those found in Unreal, the engine integrated a variety of features, including a cinematic editing tool, particle systems, export plug-ins for 3D Studio Max and Maya, and a skeletal animation system first showcased in the PlayStation 2 version of Unreal Tournament.[38][39] In addition, the user interface for UnrealEd was rewritten in C++ using the wxWidgets toolkit, which Sweeney. said was the "best thing available" at the time.[3]</p>
+      <h2>Unreal 3.0</h2>
+      <p> The engine was based on the first-generation, but contained new features. "The basic architectural decisions visible to programmers of an object-oriented design, a data-driven scripting approach, and a fairly modular approach to subsystems still remain [from Unreal Engine 1]. But the parts of the game that are really visible to gamers –the renderer, the physics system, the sound system, and the tools– are all visibly new and dramatically more powerful," said Sweeney.[47</p>
+      <h2>Unreal Engine Kit</h2>
+      <p>While Unreal Engine 3 was quite open for modders to work with, the ability to publish and sell games meant using UE3 was restricted to licensees of the engine. However, in November 2009, Epic released a free version of UE3's SDK, called the Unreal Development Kit (UDK), that is available to the general public.</p>
+      <h2>Unreal Engine 4.0</h2>
+      <p>One of the major features planned for UE4 was real-time global illumination using voxel cone tracing, eliminating pre-computed lighting.[74] However, this feature, called Sparse Voxel Octree Global Illumination (SVOGI), has been replaced with a similar but less computationally expensive algorithm due to performance concerns.[75] UE4 also includes the new "Blueprints" visual scripting system (a successor to UE3's "Kismet"[76]), which allows for rapid development of game logic without using code, resulting in less of a divide between technical artists, designers, and programmers.</p>
+      <h2>Unreal Engine 5.0</h2>
+      <p>With potentially tens of billions of polygons present on a single screen at 4k resolution, Epic also developed the Unreal Engine 5 to take advantage of the upcoming high-speed storage solutions with the next-generation console hardware that will use a mix of RAM and custom solid-state drives.[109] Epic had worked closely with Sony in optimizing Unreal Engine 5 for the PlayStation 5, with Epic helping Sony with the console's storage architecture</p>
+      <h2>Supported Platforms</h2>
+      <ul>
+Microsoft Windows
+macOS
+Linux
+HTML5
+iOS
+Android
+Nintendo Switch
+PlayStation
+Xbox One
+Magic Leap One
+HTC Vive
+Oculus Rift
+PlayStation VR
+Google Daydream
+OSVR
+Samsung Gear VR
+HoloLens 2
+PlayStation 5
+Xbox Series X and Xbox Series S
+Stadia
+      </ul>
+      <h2>UnrealScript</h2>
+      <p>Similar to Java, UnrealScript was object-oriented without multiple inheritance (classes all inherit from a common Object class), and classes were defined in individual files named for the class they define. Unlike Java, UnrealScript did not have object wrappers for primitive types. Interfaces were only supported in Unreal Engine generation 3 and a few Unreal Engine 2 games. UnrealScript supported operator overloading, but not method overloading, except for optional parameters.</p>
+
+  </body>
