--- a/tech-doc-index.html
+++ b/tech-doc-index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="css/tech-doc-index.css">
   <main id="main-doc">
     <nav id="navbar">
       <header><strong>Unreal Engine</strong></header>
@@ -69,7 +71,7 @@
       <section class="main-section" id="supported_platforms">
         <header><h1>Supported Platforms</h1></header>
         <p>
-      <ul>
+      <ul class="supportedplatforms">
         <li>Microsoft Windows</li>
         <li>macOS</li>
         <li>Linux</li>
