--- a/portfolio-index.html
+++ b/portfolio-index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html>
+<head>
+  <link rel="stylesheet" href="css\personal-master.css">
   <body id="welcome-section">
          <div id="navbar" class="sticky">
          <a id="profile-link" href=".contact">Contact</a>
