--- a/portfolio-index.html
+++ b/portfolio-index.html
@@ -1,7 +1,5 @@
 <!doctype html>
 <html>
-<head>
-  <link rel="stylesheet" href="css\personal-master.css">
   <body id="welcome-section">
          <div id="navbar" class="sticky">
          <a id="profile-link" href=".contact">Contact</a>
@@ -13,6 +11,14 @@
     <br>
     <br>
      <h1 id="about" style="font-size: 50px;">My Name is Justine</h1>
-     <h3 id="about" style="font-size: 25px;"> I am training to be a front-end and back-end Software Developer<h3>
+     <h3 id="about" style="font-size: 25px;"> I am training to be a front-end and back-end Software Developer<h3> <br><br><br><br><br><br><br><br>
+       <section id="projects" class="project-tile">
+         <h1 style="color:white; font-size: 50px; text-align: center; background-color: darkred;">Below are a few of my projects</h1>
+<p class="codepen" data-height="384" data-theme-id="light" data-default-tab="result" data-user="jlj2189" data-slug-hash="YzqJvYZ" data-preview="true"  data-pen-title="YzqJvYZ">
+ <a href="https://codepen.io/jlj2189/pen/YzqJvYZ">
+  YzqJvYZ</a> by jlj2189 (<a href="https://codepen.io/jlj2189">@jlj2189</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+       </section>
        </body>
-       <body id="projects">
