--- a/portfolio-index.html
+++ b/portfolio-index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
+<head>
+  <link rel="stylesheet" type="text/css" href="css/personal-master.css">
+  <section>
   <body id="welcome-section">
          <div id="navbar" class="sticky">
          <a id="profile-link" href=".contact">Contact</a>
-         <a id="profile-link" href=".Work"> Work</a>
+         <a id="profile-link" href="#projects"> Work</a>
          <a id="profile-link" href="#about">About</a>
          </div>
     <br>
@@ -12,13 +15,27 @@
     <br>
      <h1 id="about" style="font-size: 50px;">My Name is Justine</h1>
      <h3 id="about" style="font-size: 25px;"> I am training to be a front-end and back-end Software Developer<h3> <br><br><br><br><br><br><br><br>
-       <section id="projects" class="project-tile">
-         <h1 style="color:white; font-size: 50px; text-align: center; background-color: darkred;">Below are a few of my projects</h1>
-<p class="codepen" data-height="384" data-theme-id="light" data-default-tab="result" data-user="jlj2189" data-slug-hash="YzqJvYZ" data-preview="true"  data-pen-title="YzqJvYZ">
- <a href="https://codepen.io/jlj2189/pen/YzqJvYZ">
-  YzqJvYZ</a> by jlj2189 (<a href="https://codepen.io/jlj2189">@jlj2189</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+       </section>
+       <section id="projects">
+          <h1 style="color:white; font-size: 50px; text-align: center; background-color: darkred;padding-top: 75px;">Below are a few of my projects</h1>
+      <div id="wrapper">
+      <div id="item" class="project-tile" >
+        <h2>Chef Survey</h2>
+        <a href="https://codepen.io/jlj2189/pen/YzqJvYZ">
+         <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
+         width="250"" height="250">                                 </div>
+      <div id="item" class="project-tile">
+        <h2>Chef Survey</h2>
+        <a href="https://codepen.io/jlj2189/pen/YzqJvYZ">
+         <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
+         width="250"" height="250">
+                       </div>
+      <div id="item" class="project-tile">
+                <h2>Chef Survey</h2>
+        <a href="https://codepen.io/jlj2189/pen/YzqJvYZ">
+         <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
+         width="250"" height="250">
+      </div>
+      </div>
        </section>
        </body>
