--- a/portfolio-index.html
+++ b/portfolio-index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
-<head>
-  <link rel="stylesheet" type="text/css" href="css/personal-master.css">
   <section>
   <body id="welcome-section">
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/personal-master.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <link rel="stylesheet" media="mediatype and|not|only (expressions)" href="print.css">
+    </head>
          <div id="navbar" class="sticky">
          <a id="profile-link" href=".contact">Contact</a>
          <a id="profile-link" href="#projects"> Work</a>
