--- a/portfolio-index.html
+++ b/portfolio-index.html
@@ -12,6 +12,11 @@
          <a id="profile-link" href="#projects"> Work</a>
          <a id="profile-link" href="#about">About</a>
          </div>
+
+    <!-- END NAV -->
+
+    <!-- START WELCOME SECTION -->
+
     <br>
     <br>
     <br>
@@ -19,26 +24,80 @@
      <h1 id="about" style="font-size: 50px;">My Name is Justine</h1>
      <h3 id="about" style="font-size: 25px;"> I am training to be a front-end and back-end Software Developer<h3> <br><br><br><br><br><br><br><br>
        </section>
+
+       <!-- END WELCOME SECTION -->
+
+       <!-- START PROJECTS SECTION -->
+
        <section id="projects">
           <h1 style="color:white; font-size: 50px; text-align: center; background-color: darkred;padding-top: 75px;">Below are a few of my projects</h1>
       <div id="wrapper">
-      <div id="item" class="project-tile" >
-        <h2>Chef Survey</h2>
-        <a href="https://codepen.io/jlj2189/pen/YzqJvYZ">
+      <div id="item" class="project-tile">
+                <h2>Chef Survey</h2>
+        <a href="https://codepen.io/jlj2189/pen/YzqJvYZ"></a>
          <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
-         width="250"" height="250">                                 </div>
+         width="250"" height="250">
+      </div>
       <div id="item" class="project-tile">
         <h2>Chef Survey</h2>
-        <a href="https://codepen.io/jlj2189/pen/YzqJvYZ">
+                                         <a href="https://codepen.io/jlj2189/pen/YzqJvYZ"></a>
          <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
          width="250"" height="250">
                        </div>
       <div id="item" class="project-tile">
                 <h2>Chef Survey</h2>
-        <a href="https://codepen.io/jlj2189/pen/YzqJvYZ">
+        <a href="https://codepen.io/jlj2189/pen/YzqJvYZ"></a>
          <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
          width="250"" height="250">
       </div>
       </div>
+                                  <br>
+                                  <br>
+                                  <br>
+                                  <br>
+                                  <br>
+                                  <br>
        </section>
-       </body>
+
+      <!-- END PROJECTS SECTION -->
+
+      <!-- START CONTACT SECTION -->
+      <section id="contact" class="contact-section">
+  <div class="contact-section-header">
+    <h2>Let's work together...</h2>
+    <p>How do you take your coffee?</p>
+  </div>
+  <div class="contact-links">
+      <section id="contact" class="contact-section">
+  <div class="contact-section-header">
+    <h2>Let's work together...</h2>
+    <p>How do you take your coffee?</p>
+  </div>
+  <div class="contact-links">
+    <a
+      href="https://facebook.com/freecodecamp"
+      target="_blank"
+      class="btn contact-details"
+      ><i class="fab fa-facebook-square"></i> Facebook</a
+    >
+    <a
+      id="profile-link"
+      href="https://github.com/freecodecamp"
+      target="_blank"
+      class="btn contact-details"
+      ><i class="fab fa-github"></i> GitHub</a
+    >
+    <a
+      href="https://twitter.com/freecodecamp"
+      target="_blank"
+      class="btn contact-details"
+      ><i class="fab fa-twitter"></i> Twitter</a
+    >
+    <a href="mailto:example@example.com" class="btn contact-details"
+      ><i class="fas fa-at"></i> Send a mail</a
+    >
+    <a href="tel:555-555-5555" class="btn contact-details"
+      ><i class="fas fa-mobile-alt"></i> Call me</a
+    >
+  </div>
+</section>
